--- a/app/assets/stylesheets/aside.css.scss
+++ b/app/assets/stylesheets/aside.css.scss
@@ -30,6 +30,7 @@ aside {
     img {
       border: 3px solid #fff;
       -webkit-box-shadow: rgba(0,0,0,0.5) 0 0 3px;
+      -moz-box-shadow: rgba(0,0,0,0.5) 0 0 3px;
       box-shadow: rgba(0,0,0,0.5) 0 0 3px;
       background: #fff no-repeat;
       width: 100px;
