--- a/app/assets/stylesheets/categories.css.scss
+++ b/app/assets/stylesheets/categories.css.scss
@@ -1,3 +1,24 @@
+@mixin transition($transition...) {
+  -webkit-transition: $transition;
+     -moz-transition: $transition;
+       -o-transition: $transition;
+          transition: $transition;
+}
+
+@mixin box-shadow($shadow...) {
+  -webkit-box-shadow: $shadow;
+     -moz-box-shadow: $shadow;
+          box-shadow: $shadow;
+}
+
+@mixin scale($ratio) {
+  -webkit-transform: scale($ratio);
+     -moz-transform: scale($ratio);
+      -ms-transform: scale($ratio);
+       -o-transform: scale($ratio);
+          transform: scale($ratio);
+}
+
 $categories: startups orange, ruby red, management teal, marketing green, design purple, home #333;
 
 .top {
@@ -70,19 +91,11 @@ $categories: startups orange, ruby red, management teal, marketing green, design
         color: #fff;
         font-size: 2.5em;
         text-decoration: none;
-        -webkit-transition: all 0.1s ease;
-        -moz-transition: all 0.1s ease;
-        -o-transition: all 0.1s ease;
-        transition: all 0.1s ease;
+        @include transition(all 0.1s ease);
       
         &:hover {
-          -webkit-transform: scale(1.1);
-          -moz-transform: scale(1.1);
-          -o-transform: scale(1.1);
-          transform: scale(1.1);
-          -webkit-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
-          -moz-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
-          box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3)
+          @include scale(1.1);
+          @include box-shadow(1px 1px 2px rgba(0, 0, 0, 0.3));
         }
 
         .category_count {
