add styling for javascript category

--- a/app/assets/stylesheets/categories.css.scss
+++ b/app/assets/stylesheets/categories.css.scss
@@ -19,7 +19,7 @@
           transform: scale($ratio);
 }
 
-$categories: startups orange, ruby red, management teal, marketing green, design purple, home #333;
+$categories: javascript gold, startups orange, ruby red, management teal, marketing green, design purple, home #333;
 
 .top {
   padding-top: 5px;
