add styling to inline code

--- a/app/assets/stylesheets/syntax.css.scss.erb
+++ b/app/assets/stylesheets/syntax.css.scss.erb
@@ -3,6 +3,13 @@
 $mono: 'Inconsolata', Monaco, Courier, monospace;
 $code-border-color: #efefef;
 
+code {
+  font-family: $mono;
+  font-size: .8em;
+  background-color: whitesmoke;
+  padding: 2px;
+}
+
 .highlight {
   font-family: $mono;
   font-size: .65em;
