--- a/app/assets/stylesheets/post.css.scss
+++ b/app/assets/stylesheets/post.css.scss
@@ -9,9 +9,18 @@ article.post {
     }
   }
 
+  h3, h4 {
+    color: #333;
+    margin-bottom: 0.7em;
+  }
+
   p {
     line-height: 1.4;
     font-weight: 400;
+  }
+
+  h3 + p, h4 + p {
+    margin-top: 0px;
   }
 
   li {
