generate list of all categories for page descriptions

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,4 +1,5 @@
 <%- title "Categories" -%>
+<meta property="og:description" content="Articles by category: <%= categories_list %>. All written by Scott Bartell" />
 
 <section id="articles">
   <header>
