--- a/app/views/layouts/abstract.html.erb
+++ b/app/views/layouts/abstract.html.erb
@@ -16,6 +16,7 @@
   <link rel="canonical" href="http://scottbartell.com/" />
   <meta property="og:description" content="The blog of Scott Bartell" />
   <meta property="og:title" content="scottbartell.com" />
+  <meta property="og:description" content="Scott Bartell blogs about <%= categories_list %>" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="http://scottbartell.com/" />
   <%- end -%>
