--- a/app/views/layouts/abstract.html.erb
+++ b/app/views/layouts/abstract.html.erb
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <title><%= (yield(:title) && !yield(:title).empty? ? yield(:title) : 'Scott Bartell') %></title>
   <link rel="shortcut icon" href="<%= image_path('favicon.ico') %>" />
+  <link rel="alternate" type="application/rss+xml" title="RSS 2.0" href="http://feeds.feedburner.com/scottbartell" />
   <link rel="me" href="https://plus.google.com/u/0/109955571462751281352" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <link href='http://fonts.googleapis.com/css?family=Neuton|Inconsolata|Merriweather+Sans:700' rel='stylesheet' type='text/css'>
