--- a/app/views/layouts/abstract.html.erb
+++ b/app/views/layouts/abstract.html.erb
@@ -12,12 +12,11 @@
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
   <meta property="fb:app_id" content="<%= FACEBOOK_APP_ID %>" />
-  <meta property="og:site_name" content="scottbartell.com" />
-  <%- unless @post -%>
+  <meta property="og:site_name" content="Scott Bartell" />
+  <%- unless @post || @category || @categories -%>
   <link rel="canonical" href="http://scottbartell.com/" />
-  <meta property="og:description" content="The blog of Scott Bartell" />
-  <meta property="og:title" content="scottbartell.com" />
   <meta property="og:description" content="Scott Bartell blogs about <%= categories_list %>" />
+  <meta property="og:title" content="Articles | Scott Bartell" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="http://scottbartell.com/" />
   <%- end -%>
