--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,5 @@
-<%- title "Scott Bartell Blog" -%>
+<%- title "Articles | Scott Bartell" -%>
+
 <% content_for :head do %>
   <%= rel_next_prev_link_tags @posts %>
 <% end %>
