--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,17 +1,9 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
- * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the top of the
- * compiled file, but it's generally better to create a new file per style scope.
- *
- *= require media
- *= require_self
- *= require_tree .
- */
+// CSS Reset
+@import "components/normalize";
+
+// Globals
+@import "globals/variables";
+@import "globals/mixins";
 
 html {
   -webkit-font-smoothing: antialiased;
@@ -28,7 +20,7 @@ h1 {
   font-size: 2em;
 }
 
-#articles, #content {
+#content {
   margin-left: 33%;
   margin-top: 40px;
   width: 55%;
@@ -46,3 +38,49 @@ a.twitter-username{
     content: "@";
   }
 }
+
+header.main_head {
+  nav ul {
+    letter-spacing: 1px;
+    font-family: 'Merriweather Sans', sans-serif;
+    font-size: .7em;
+    font-weight: 700;
+    list-style-type: none;
+    text-transform: uppercase;
+    margin: 0;
+    padding: 0;
+    color: #b3b3b1;
+
+    li {
+      display: inline-block;
+      margin-right: 15px;
+      line-height: 2.5;
+      border-bottom: 2px transparent;
+
+      &.active, &.active a {
+          color: #555;
+        }
+
+      &.active {
+        border-bottom: 2px solid orange;
+      }
+
+      a {
+        color: #b3b3b1;
+        text-decoration: none;
+      }
+
+      a:hover {
+        color: #555;
+      }
+    }
+  }
+}
+
+// Sections
+@import "sections/*";
+
+// Components
+@import "components/syntax";
+@import "components/aside";
+@import "components/media";
