--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,15 +1,15 @@
-<%- title "Categories | ScottBartell.com" -%>
+<%- title "Categories" -%>
 <%- content_for(:head) do -%>
-<meta name="description" content="Articles written by Scott Bartell about <%= categories_list %>" />
-<link rel="canonical" href="<%= categories_url %>" />
-<meta property="og:description" content="Articles by category: <%= categories_list %>. All written by Scott Bartell" />
-<meta property="og:title" content="Categories | ScottBartell.com" />
-<meta property="og:type" content="article" />
-<meta property="og:url" content="<%= categories_url %>" />
+  <meta name="description" content="Articles written by Scott Bartell about <%= categories_list %>">
+  <link rel="canonical" href="<%= categories_url %>">
+  <meta property="og:description" content="Articles by category: <%= categories_list %>. All written by Scott Bartell">
+  <meta property="og:title" content="Categories | ScottBartell.com">
+  <meta property="og:type" content="article">
+  <meta property="og:url" content="<%= categories_url %>">
 <%- end -%>
 
-<section id="articles">
-  <header>
+<section id="posts">
+  <header class="main_head">
     <nav>
       <ul>
         <li><%= link_to 'articles', root_path %></li>
