--- a/app/assets/stylesheets/sections/categories.scss
+++ b/app/assets/stylesheets/sections/categories.scss
@@ -1,24 +1,3 @@
-@mixin transition($transition...) {
-  -webkit-transition: $transition;
-     -moz-transition: $transition;
-       -o-transition: $transition;
-          transition: $transition;
-}
-
-@mixin box-shadow($shadow...) {
-  -webkit-box-shadow: $shadow;
-     -moz-box-shadow: $shadow;
-          box-shadow: $shadow;
-}
-
-@mixin scale($ratio) {
-  -webkit-transform: scale($ratio);
-     -moz-transform: scale($ratio);
-      -ms-transform: scale($ratio);
-       -o-transform: scale($ratio);
-          transform: scale($ratio);
-}
-
 $categories: javascript gold, startups orange, ruby red, management teal, marketing green, design purple, home #333;
 
 .top {
@@ -31,7 +10,7 @@ $categories: javascript gold, startups orange, ruby red, management teal, market
 
     a {
       text-decoration: none;
-      color: #e3e3e1;
+      color: lighten(#555, 25%);
 
       &:after {
         content: ' >'
