--- a/app/assets/stylesheets/sections/posts.css.scss
+++ b/app/assets/stylesheets/sections/posts.css.scss
@@ -1,42 +1,4 @@
-#articles {
-  header {
-    nav ul {
-      letter-spacing: 1px;
-      font-family: 'Merriweather Sans', sans-serif;
-      font-size: .7em;
-      font-weight: 700;
-      list-style-type: none;
-      text-transform: uppercase;
-      margin: 0;
-      padding: 0;
-      color: #b3b3b1;
-
-      li {
-        display: inline-block;
-        margin-right: 15px;
-        line-height: 2.5;
-        border-bottom: 2px transparent;
-
-        &.active, &.active a {
-            color: #555;
-          }
-
-        &.active {
-          border-bottom: 2px solid orange;
-        }
-
-        a {
-          color: #b3b3b1;
-          text-decoration: none;
-        }
-
-        a:hover {
-          color: #555;
-        }
-      }
-    }
-  }
-
+section#posts {
   article {
     margin-top: 30px;
 
