--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,4 +1,4 @@
-<article class="post <%= post_category(post) %>">
+<article class="<%= post_category(post) %>">
   <header>
     <span class="category"><%= post_category_link(post) %></span>
     <h1><%= link_to post.title, post %></h2>
