style the about me links seagreen

--- a/app/assets/stylesheets/sections/categories.scss
+++ b/app/assets/stylesheets/sections/categories.scss
@@ -1,4 +1,4 @@
-$categories: javascript gold, startups orange, ruby red, management teal, marketing green, design purple, home #333;
+$categories: javascript gold, startups orange, ruby red, management teal, marketing green, design purple, home #333, about seagreen;
 
 .top {
   padding-top: 5px;
