--- a/app/assets/stylesheets/components/aside.scss
+++ b/app/assets/stylesheets/components/aside.scss
@@ -29,14 +29,51 @@ aside {
 
     img {
       border: 3px solid #fff;
-      -webkit-box-shadow: rgba(0,0,0,0.5) 0 0 3px;
-      -moz-box-shadow: rgba(0,0,0,0.5) 0 0 3px;
       box-shadow: rgba(0,0,0,0.5) 0 0 3px;
       background: #fff no-repeat;
       width: 100px;
       height: 100px;
       margin: 0;
       padding: 0;
+      @include transition(all 0.3s ease-in-out);
+
+      &:hover {
+      -webkit-transform: rotate(-5deg) scale(1.6);
+         -moz-transform: rotate(-5deg) scale(1.6);
+          -ms-transform: rotate(-5deg) scale(1.6);
+           -o-transform: rotate(-5deg) scale(1.6);
+              transform: rotate(-5deg) scale(1.6);
+      }
+
+    }
+  }
+  ul.inline {
+    padding: 0;
+    margin: 30px 0 0;
+    list-style: none;
+    font-size: 1.7em;
+
+    li {
+      display: inline;
+      margin: 0 5px;
+
+      a {
+        text-decoration: none;
+        color: #444;
+
+        &:hover {
+          border-bottom: none;
+          color: #222;
+        }
+      }
+      
+      i {
+        display: inline-block;
+      
+        &:hover {
+          @extend %wobble;
+        }
+      }
     }
   }
 }
