--- a/app/assets/stylesheets/sections/admin.scss
+++ b/app/assets/stylesheets/sections/admin.scss
@@ -5,7 +5,7 @@
 
   input, textarea {
     color: #333;
-    font-family: Monaco, Courier, monospace;
+    font-family: $font-mono;
     font-size: 14px;
     line-height: 1.5em;
   }
