--- a/app/views/layouts/_aside.html.erb
+++ b/app/views/layouts/_aside.html.erb
@@ -5,5 +5,11 @@
     </a>
     <h1><%= link_to 'Scott Bartell', root_path %></h1>
     <h2>Web Developer</h2>
+    <ul class="inline contact-icons">
+      <li><a href="mailto:me@scottbartell.com"><i class="general foundicon-mail"></a></i></li>
+      <li><a href="https://github.com/scottbartell"><i class="social foundicon-github"></a></i></li>
+      <li><a href="https://twitter.com/scottbartell"><i class="social foundicon-twitter"></a></i></li>
+      <li><a href="http://www.linkedin.com/in/scottsbartell"><i class="social foundicon-linkedin"></a></i></li>
+    </ul>
   </div>
 </aside>
