import foundation icons

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -4,6 +4,7 @@
 // Globals
 @import "globals/variables";
 @import "globals/mixins";
+@import "foundation-icons";
 
 html {
   -webkit-font-smoothing: antialiased;
