add green about link to top

--- a/app/views/layouts/_aside.html.erb
+++ b/app/views/layouts/_aside.html.erb
@@ -12,4 +12,10 @@
       <li><a href="http://www.linkedin.com/in/scottsbartell"><i class="social foundicon-linkedin"></a></i></li>
     </ul>
   </div>
+  <div id="about">
+    <%= link_to about_path do %>
+      <i class="general-enclosed foundicon-plus"></i>
+      <span>About Scott</span>
+    <% end %>
+  </div>
 </aside>
