--- a/app/assets/stylesheets/components/aside.scss
+++ b/app/assets/stylesheets/components/aside.scss
@@ -76,4 +76,32 @@ aside {
       }
     }
   }
+
+  #about {
+    width: 153px;
+    height: 50px;
+    padding: 10px;
+    margin: -20px auto 0;
+    background-color: seagreen;
+    box-shadow: 1px 1px 5px #ccc;
+    @include transition(all 0.4s ease-in-out);
+
+    &:hover {
+  -webkit-transform: rotate(-5deg);
+     -moz-transform: rotate(-5deg);
+      -ms-transform: rotate(-5deg);
+       -o-transform: rotate(-5deg);
+          transform: rotate(-5deg);
+      }
+
+    a {
+      height: 100%;
+      margin-top: 20px;
+      text-align: center;
+      display: block;
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+    }
+  }
 }
