add meta description to home page

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,6 @@
 <% title "Articles" %>
 <% content_for :head do %>
+  <meta name="description" content="Scott Bartell blogs about <%= categories_list %>">
   <link rel="canonical" href="http://scottbartell.com/">
   <meta property="og:description" content="Scott Bartell blogs about <%= categories_list %>">
   <meta property="og:title" content="Articles | Scott Bartell">
