update my picture

--- a/app/views/layouts/_aside.html.erb
+++ b/app/views/layouts/_aside.html.erb
@@ -1,7 +1,7 @@
 <aside>
   <div id="bio">
     <%= link_to root_path, title: "Home" do %>
-      <img src="https://lh6.googleusercontent.com/-EoCZX5Y4bzk/UE0ZbUU_mLI/AAAAAAAADn8/4tlU1--WDhI/w526-h525-p-k/IMG_0307.JPG" alt="Scott Bartell">
+      <img src="https://lh3.googleusercontent.com/-WN6IBY-wMM4/Uc3dJD40D8I/AAAAAAAAHIY/BtooDfEc2Uo/s612-no/b38fcc08e02311e2a1c022000a1fb718_7.jpg" alt="Scott Bartell">
     <% end %>
     <h1><%= link_to 'Scott Bartell', root_path, title: "Home" %></h1>
     <h2>Web Developer</h2>
