adjust the syntax highlighting numbering border

--- a/app/assets/stylesheets/components/syntax.scss
+++ b/app/assets/stylesheets/components/syntax.scss
@@ -76,7 +76,7 @@ code {
   font-family: $mono;
   font-size: .65em;
   border: 1px solid $code-border-color;
-  border-left: 3ex solid $code-border-color;
+  border-left: 2em solid $code-border-color;
   position: relative;
   margin: 1em 0;
 
