adjust the width of the content for small devices

--- a/app/assets/stylesheets/components/media.scss
+++ b/app/assets/stylesheets/components/media.scss
@@ -51,8 +51,9 @@
   }
 
   #content {
-    margin: 0;
-    width: 100%;
+    margin-left: 2%;
+    margin-top: 0px;
+    width: 94%;
 
     header {
       padding: 0 3px;
