--- a/app/assets/stylesheets/components/media.scss
+++ b/app/assets/stylesheets/components/media.scss
@@ -29,6 +29,30 @@
     font-size: 16px;
   }
 
+  aside #about {
+    margin-top: -10px;
+    height: 40px;
+    margin-bottom: 30px;
+    text-align: center;
+    position: inherit!important;
+    
+    &:hover {
+      @include rotate(0);
+    }
+
+    i {
+      display: none;
+    }
+  }
+
+  nav {
+    font-size: 1.1em;
+  }
+
+  #categories li a {
+    padding: 20px 30px!important;
+  }
+
   #posts {
     header nav ul {
       text-align: center;
@@ -41,14 +65,6 @@
 }
 
 @media screen and (max-width: 400px) {
-  #about {
-    margin-top: -10px;
-    height: 40px;
-    margin-bottom: 30px;
-    text-align: center;
-    position: inherit;
-    @include rotate(0);
-  }
 
   #content {
     margin-left: 2%;
